func_str.result, func_str.test:   Added a test case for bug #7751. item_strfunc.cc:   Fixed bug #7751.   The function Item_func_conv::val_str did not update   the unsigned_flag value.

sql/item_strfunc.cc:
  Fixed bug #7751.
  The function Item_func_conv::val_str did not update
  the unsigned_flag value.
mysql-test/t/func_str.test:
  Added a test case for bug #7751.
mysql-test/r/func_str.result:
  Added a test case for bug #7751.